Push mobile jumplink fix

--- a/m_styles.less
+++ b/m_styles.less
@@ -7,6 +7,8 @@
 @tertiary-text-color: #DAA520;
 @d-max-width: 1420px;
 @d-min-width: 1000px;
+@m-max-width: 480px;
+@m-min-width: 360px;
 @mobile-alt-bg: #f5f5f5; 
 
 h1, h2, h3, h4, h5, h6, p {
@@ -37,12 +39,11 @@ main {
   }
 }
 
-.mobile {
-  .custom-sun-hr {
-    width: 80%;
-    .sun-hr-col {
-      width: 24px;
-    }
+
+.custom-sun-hr {
+  width: 80%;
+  .sun-hr-col {
+    width: 24px;
   }
 }
 
@@ -63,11 +64,7 @@ hr.sun-hr {
     height: 24px;
     text-align: center;
   }
-}
-
-.mobile {
-  display: none;
-}
+} 
  
 /* ====================== NAVBAR SELECTORS ====================== */
 .navbar {
@@ -460,70 +457,6 @@ main {
   } 
 }
 
-#d-rentals {
-  max-width: @d-max-width;
-  min-width: @d-min-width;
-  margin: 0 auto;
-  h1 {
-    font-size: 50px;
-    line-height: 60px;
-    padding: 50px 0;
-    color: #DAA520;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 800;
-    letter-spacing: 10px;
-    margin-bottom: 10px;
-  }
-  p {
-    font-size: 14px;
-    line-height: 21px;
-    vertical-align: top;
-  }
-  .rental-item {
-    margin-bottom: 30px;
-    .rental-info {
-      background: #fafafa;
-      padding: 15px 25px;
-      width: 50%;
-      vertical-align: middle;
-      text-align: center;
-      td {
-        vertical-align: top;
-      }
-      h3 {
-        font-size: 30px;
-        line-height: 42px; 
-        margin-bottom: 10px;
-      }
-      p {
-        margin: 8px 0 0;
-      }
-      .amenities {
-        margin-top: 20px;
-        .col {
-          width: 50%;
-          padding: 0 5px;
-        }
-      }
-    }
-    .slider { 
-      margin-bottom: -32px;
-      .slide-arrow { 
-        position: relative; 
-        cursor: pointer;
-      }
-      .slide-arrow.right {
-        float: right;
-        transform: translate3d(-10px, -44px, 0);
-      }
-      .slide-arrow.left {
-        transform: translate3d(10px, -44px, 0);
-      } 
-    } 
-  }
-}
-
 #about-us {
   background-color: #fafafa;
   text-align: center;
@@ -584,16 +517,14 @@ footer {
         font-weight: 700;
       }
     }
-    .mobile {
-      .contact {
-        text-align: center;
-        p {
-          font-size: 14px;
-          line-height: 21px; 
-        }
-        i {
-          color: @primary-p-color;
-        }
+    .contact {
+      text-align: center;
+      p {
+        font-size: 14px;
+        line-height: 21px; 
+      }
+      i {
+        color: @secondary-p-color;
       }
     }
     .license, .unstyle-link {
@@ -604,8 +535,7 @@ footer {
 
 #address-mod {
   padding: 30px 0;
-  text-align: center;
-  background-color: #040404;
+  text-align: center; 
   h2 {
     font-size: 20px;
     line-height: 30px;
@@ -644,30 +574,11 @@ footer {
   }
 }
 
-// Mobile & tablet device styles
-@media only screen and (max-width: 821px) {
-  #mobile-wrapper, #m-location, #m-rentals, 
-  .navbar, .slider, .mySlides, footer, html, 
-  .rental-amenities, .rental-info, #m-photos {
-    min-width: 360px;
-  } 
 
-  main, .desktop {
-    display: none !important;
-  }  
-
-  div.mobile {
-    display: block !important;
-  }
-  a.mobile {
-    display: inline !important;
-  }
-  td.mobile {
-    display: table-cell !important;
-  } 
-  li.mobile {
-    display: list-item !important;
-  } 
+#mobile-wrapper, #m-location, #m-rentals, 
+.navbar, .slider, .mySlides, footer, html, 
+.rental-amenities, .rental-info, #m-photos {
+  min-width: 360px;
 } 
 
 // Tablet-specific
@@ -677,10 +588,6 @@ footer {
       a {
         line-height: 56px;
       } 
-    }
-    // msam: Show shortened navbar for tablets and mobile devices
-    button.mobile {
-      display: block !important;
     } 
   }
 }
